--- a/css/admin.css
+++ b/css/admin.css
@@ -64,21 +64,6 @@ body {
     margin: 12px 0;
 }
 
-.userlist {
-    font-size: 20px;
-    margin: 25px;
-    transform: translate(40%, -20%);
-    border-style: solid;
-    border-bottom: 50%;
-    border-color: yellowgreen;
-    border-bottom: 6px solid;
-    margin-bottom: 50px;
-    padding: 33px 0;
-    padding-left: 33px;
-    padding-right: 20px ;
-    border-radius: 12%;
-    background-color: rgba(153, 205, 50, 0.597);
-}
 
 .welcome {
     margin: 25px;
@@ -92,4 +77,18 @@ body {
     
     font-size: x-large;
 
+}
+
+.userlist {
+    max-width: 40%;
+    font-size: 20px;
+    transform: translate(90%, -0%);
+    border-style: solid;
+    border-bottom: 50%;
+    border-color: yellowgreen;
+    border-bottom: 6px solid;
+    margin-bottom: 50px;
+    padding: 33px;
+    
+    background-color: rgba(153, 205, 50, 0.597);
 }
